[project]
name = "learn-online"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "envparse>=0.2.0",
    "fastapi>=0.115.12",
    "psycopg>=3.2.9",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.11.5",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
